--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
+    "marked": "^17.0.1",
     "next": "16.1.1",
     "postcss": "^8.5.6",
     "react": "19.2.3",
